updating older files

--- a/General/DependencyInjection.tex
+++ b/General/DependencyInjection.tex
@@ -14,7 +14,7 @@
 	\end{itemize}
 \section{Scoped}
 	\begin{itemize}
-		\item Created once per request and disposed when the request ends.
+		\item \textbf{Created once per request} and disposed when the request ends.
 		\item Use cases
 		\begin{itemize}
 			\item Entity Framework DbContext
