--- a/main.tex
+++ b/main.tex
@@ -34,9 +34,8 @@
  
 \newpage
 % Include other files here
-\include{Patterns/Outline}
-\include{DataStructures/Outline}
-	
+\include{General/Concurrency}
+\include{General/Consistency}
 
 
 \end{document}
